Fixed overflow: hidden issue in body. Added hover effect with project titles in portfolio grid.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,10 @@ html, body{
   margin: 0;
   padding: 0;
   font-family: 'Palatino', sans-serif;
-  overflow-x: hidden;
+}
+
+.body-overflow {
+  overflow: hidden;
 }
 
 #particles-js {
@@ -218,4 +221,41 @@ div#projects {
   padding-bottom: 60px;
   margin: 0px;
   font-variant: small-caps;
+}
+
+a.item {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  pointer-events: all;
+  cursor: pointer;
+  z-index: 5;
+}
+
+.mask {
+  box-sizing: border-box;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.7);
+  border-radius: 13px;
+  opacity: 0;
+  transition: all ease 0.3s;
+  text-align: center;
+}
+
+a.item:hover .mask {
+  opacity: 1;
+}
+
+.mask h3 {
+  color: white;
+  text-transform: uppercase;
+  font-size: 24px;
+  position: absolute;
+  margin: auto;
+  width: 99%;
+  top: 50%;
+  margin-top: -12px;
 }
